--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clipboard-copy": "^4.0.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "next": "14.2.4",
